--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,56 @@ body {
     text-decoration: underline;
 }
 
+.header_container{
+    display: flex;
+    padding: 1rem 2rem;
+    background-color: #2771CD;
+    justify-content: space-between;
+}
+
+.menu-hamburguesa {
+    width: 35px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+  }
+
+  .menu-hamburguesa span {
+    width: 100%;
+    height: 4px;
+    background-color: #ffffff; /* Color líneas */
+    border-radius: 2px;
+  }
+
+.header__logo{
+    display: flex;
+    align-items: center;
+}
+.logo{
+    max-width: 7rem;
+}
+  .barra-busq{
+    padding: 10px;
+    padding-right: 35px;
+    border-radius: 40px 0 0 40px;
+    border:0;
+    outline: none;
+    font-size: 1rem;
+  }
+
+  .lupa{
+    background-color: #FFA300;
+    padding: 11.6px;
+    position: absolute;
+    margin: auto;
+    border-radius: 0 40px 40px 0;
+    color: #000;
+    cursor: pointer;
+    border: none;
+  }
+
 /* Media Queries para Responsividad */
 
 /* (móviles) */
