--- a/styles.css
+++ b/styles.css
@@ -400,7 +400,7 @@ body {
 .login-section .register-text a:hover {
     text-decoration: underline;
 }
-
+/*-----------------------------HEADER---------------------------------------*/
 .header_container{
     display: flex;
     padding: 1rem 2rem;
@@ -450,6 +450,8 @@ body {
     cursor: pointer;
     border: none;
   }
+
+/*----------------------------------------------------------------------------------------*/
 
 /* Media Queries para Responsividad */
 
