--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,37 @@
-:root{
-    --color-primario: #000;
-    --bg-primario:#101010
+:root {
+        /* Colores */
+        --color-primario: #000000; /* Color principal: negro */
+        --color-secundario: #ffffff; /* Blanco puro */
+        
+        /* Tonos de azul */
+        --color-azul-claro: #8ecae6;
+        --color-azul-medio: #219ebc;
+        --color-azul-oscuro: #023047;
+      
+        /* Tonos de blanco */
+        --color-blanco-puro: #ffffff;
+        --color-blanco-grisaceo: #f0f0f0;
+        --color-blanco-apagado: #e0e0e0;
+      
+        /* Fondos */
+        --bg-primario: #101010; /* Fondo principal */
+        --bg-secundario: #282828; /* Fondo secundario */
+        --bg-azul-claro: #e0f7fa;
+        --bg-azul-oscuro: #102a43;
+      
+        /* Tipografía */
+        --tipografia-principal: "Poppins", sans-serif;
+        --tipografia-secundaria: "Roboto", sans-serif;
+      
+        /* Tamaños de fuente */
+        --font-size-xxl: 48px; /* Extra grande */
+        --font-size-xl: 40px; /* Muy grande */
+        --font-size-l: 32px; /* Grande */
+        --font-size-m: 24px; /* Mediano */
+        --font-size-s: 16px; /* Pequeño */
+        --font-size-xs: 12px; /* Extra pequeño */
 }
+
 
 body {
     font-family: Arial, sans-serif;
